# paris-saclay-edt-parser

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
src/paris_saclay_edt_parser/: browser.py  config.py  event.py  main.py
