[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paris-saclay-edt-parser"
version = "0.1.0"
description = "Parser for Paris-Saclay EDT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["selenium>=4.0", "undetected-chromedriver>=3.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[project.scripts]
edt-parse = "paris_saclay_edt_parser.main:main"

